trunk/src/latexparser/javacc/LatexLexer.java
/* Generated By:JavaCC: Do not edit this line. LatexLexer.java */
package latexparser.javacc;
import data.*;
import java.util.ArrayList;
public class LatexLexer implements LatexLexerConstants {
    private ParsedSource source;
    /**
    * Initializes the fields
    */
    private void init(){
        source=new ParsedSource();
    }

    /**
    * Main entry point in the lexer/parser. Call the constructor with the stream
    * and then call getParsedSource to parse the file and get the object.
    */
    public ParsedSource getParsedSource()throws ParseException{
        init();

        ParserEntry();

        return source;
    }

/* Main entry point of parser
    I can have a comment, or regular content, or some commands.
*/
  final public void ParserEntry() throws ParseException {
    StringBuilder acc=new StringBuilder();
    String s;
    Section sect;
    if (jj_2_2(10)) {
      label_1:
      while (true) {
        s = RegularContent();
                         acc.append(s);
        if (jj_2_1(10)) {
          ;
        } else {
          break label_1;
        }
      }
    } else {
      ;
    }
    if (jj_2_3(10)) {
      jj_consume_token(SPECS);
      ParseSpecs();
    } else {
      ;
    }
    if (jj_2_5(10)) {
      label_2:
      while (true) {
        s = RegularContent();
                         acc.append(s);
        if (jj_2_4(10)) {
          ;
        } else {
          break label_2;
        }
      }
    } else {
      ;
    }
    jj_consume_token(HEAD_BEGIN);
    ParseHeader();
                               acc=new StringBuilder();
    if (jj_2_7(10)) {
      label_3:
      while (true) {
        s = RegularContent();
                         acc.append(s);
        if (jj_2_6(10)) {
          ;
        } else {
          break label_3;
        }
      }
    } else {
      ;
    }
    if (jj_2_8(10)) {
      jj_consume_token(SPECS);
      ParseSpecs();
    } else {
      ;
    }
    if (jj_2_10(10)) {
      label_4:
      while (true) {
        s = RegularContent();
                         acc.append(s);
        if (jj_2_9(10)) {
          ;
        } else {
          break label_4;
        }
      }
    } else {
      ;
    }
    if (jj_2_12(10)) {
      label_5:
      while (true) {
        jj_consume_token(SECTION);
                    sect=ParseSection(); source.getSubitems().add(sect);
        if (jj_2_11(10)) {
          ;
        } else {
          break label_5;
        }
      }
    } else if (jj_2_13(10)) {
      jj_consume_token(ENUM_BEGIN);
             //See if a header was set
                if(source.getHeader().length()<=0)
                     source.setHeader(acc.toString());
                acc=new StringBuilder();
      ParseMainBodyWithoutSection();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_15(10)) {
      label_6:
      while (true) {
        s = RegularContent();
                         acc.append(s);
        if (jj_2_14(10)) {
          ;
        } else {
          break label_6;
        }
      }
    } else {
      ;
    }
    if (jj_2_16(10)) {
      jj_consume_token(SPECS);
      ParseSpecs();
    } else {
      ;
    }
    if (jj_2_18(10)) {
      label_7:
      while (true) {
        s = RegularContent();
                         acc.append(s);
        if (jj_2_17(10)) {
          ;
        } else {
          break label_7;
        }
      }
    } else {
      ;
    }
    jj_consume_token(FOOT_BEGIN);
    ParseFooter();
  }

  final public void ParseHeader() throws ParseException {
    StringBuilder acc=new StringBuilder();
    String s;
    Token t;
     acc.append("%");
    label_8:
    while (true) {
      if (jj_2_19(10)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_23(10)) {
        s = RegularContent();
                           acc.append(s);
      } else if (jj_2_24(10)) {
        if (jj_2_20(10)) {
          t = jj_consume_token(ENUM_BEGIN);
        } else if (jj_2_21(10)) {
          t = jj_consume_token(ENUM_END);
        } else if (jj_2_22(10)) {
          t = jj_consume_token(ITEM);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
         acc.append(t.image);
      } else if (jj_2_25(10)) {
        jj_consume_token(SPECS);
        ParseSpecs();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(HEAD_END);
               source.setHeader(acc.toString());
  }

/*
Parse main body formed by a big enumeration containing questions and question blocks
*/
  final public void ParseMainBodyWithoutSection() throws ParseException {
    StringBuilder acc=new StringBuilder();
    String s;
    Token t;
    Question q=null;
    QuestionBlock qb=null;
    ParseBigEnumeration(source);
  }

/**
    Parses a \begin{enumerate} ...  \end{enumerate} where between these 
    can be questions and/or question blocks
    Returns the characters found between after the end of the {enumerate} and the beginning of the next bloc/item
*/
  final public String ParseBigEnumeration(SourceItem container) throws ParseException {
    QuestionBlock qb;
    Question q;
    String s;
    StringBuilder opt=new StringBuilder();
    boolean collectContent=true;
    label_9:
    while (true) {
      if (jj_2_27(10)) {
        jj_consume_token(BLOCK_BEGIN);
        //Parse a question block.
                qb = ParseQuestionBlock();
         container.getSubitems().add(qb);
         collectContent=false;
      } else if (jj_2_28(10)) {
        jj_consume_token(ITEM);
        //Parse a question. 
                q = ParseQuestion();
         container.getSubitems().add(q);
         collectContent=false;
      } else if (jj_2_29(10)) {
        label_10:
        while (true) {
          s = RegularContent();
                if(collectContent)
                    opt.append(s);
          if (jj_2_26(10)) {
            ;
          } else {
            break label_10;
          }
        }
      } else if (jj_2_30(10)) {
        jj_consume_token(SPECS);
        ParseSpecs();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_31(10)) {
        ;
      } else {
        break label_9;
      }
    }
    jj_consume_token(ENUM_END);
 {if (true) return opt.toString();}
    throw new Error("Missing return statement in function");
  }

/**
    Parse an individual section
*/
  final public Section ParseSection() throws ParseException {
    StringBuilder content=new StringBuilder("");
    ArrayList<SourceItem> items=new ArrayList<SourceItem>();
    String s;
    Section  section=new Section();
    Directive dir=new Directive();
     content.append("\u005c\u005csection");
    label_11:
    while (true) {
      s = RegularContent();
                        content.append(s);
      if (jj_2_32(10)) {
        ;
      } else {
        break label_11;
      }
    }
    if (jj_2_33(10)) {
      jj_consume_token(PARAMS);
      dir = ParseParameterSet();
    } else {
      ;
    }
    if (jj_2_35(10)) {
      label_12:
      while (true) {
        s = RegularContent();
                         content.append(s);
        if (jj_2_34(10)) {
          ;
        } else {
          break label_12;
        }
      }
    } else {
      ;
    }
    if (jj_2_36(10)) {
      jj_consume_token(ENUM_BEGIN);
      s = ParseBigEnumeration(section);
                                       section.setEnumerateOptions(s);
    } else {
      ;
    }
    if (jj_2_38(10)) {
      label_13:
      while (true) {
        RegularContent();
        if (jj_2_37(10)) {
          ;
        } else {
          break label_13;
        }
      }
    } else {
      ;
    }
     section.setTextContent(content.toString()); section.getParameters().getMap().putAll(dir.getMap()); {if (true) return section;}
    throw new Error("Missing return statement in function");
  }

/*
    Parse the footer
*/
  final public void ParseFooter() throws ParseException {
    StringBuilder acc=new StringBuilder();
    String s;
    Token t;
     acc.append("%");
    label_14:
    while (true) {
      if (jj_2_39(10)) {
        ;
      } else {
        break label_14;
      }
      if (jj_2_43(10)) {
        s = RegularContent();
                           acc.append(s);
      } else if (jj_2_44(10)) {
        if (jj_2_40(10)) {
          t = jj_consume_token(ENUM_BEGIN);
        } else if (jj_2_41(10)) {
          t = jj_consume_token(ENUM_END);
        } else if (jj_2_42(10)) {
          t = jj_consume_token(ITEM);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
         acc.append(t.image);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(FOOT_END);
               source.setFooter(acc.toString());
  }

/*
Parse a question block
*/
  final public QuestionBlock ParseQuestionBlock() throws ParseException {
    StringBuilder content=new StringBuilder("");
    ArrayList<Question> questions=new ArrayList<Question>();
    String s;
    Question q;
    Directive dir;
    //Parse the parameters
        dir = ParseParameterSet();
     content.append("%");
    label_15:
    while (true) {
      s = RegularContent();
                        content.append(s);
      if (jj_2_45(10)) {
        ;
      } else {
        break label_15;
      }
    }
    label_16:
    while (true) {
      if (jj_2_46(10)) {
        jj_consume_token(ITEM);
        q = ParseQuestion();
                          questions.add(q);
      } else if (jj_2_47(10)) {
        RegularContent();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_48(10)) {
        ;
      } else {
        break label_16;
      }
    }
    jj_consume_token(BLOCK_END);
    label_17:
    while (true) {
      s = RegularContent();
                        content.append(s);
      if (jj_2_49(10)) {
        ;
      } else {
        break label_17;
      }
    }
        {if (true) return new QuestionBlock(content.toString(),questions,dir);}
    throw new Error("Missing return statement in function");
  }

/*
Parse a parameter set.
*/
  final public Directive ParseParameterSet() throws ParseException {
    Directive d=new Directive();
    Token t1,t2;
    jj_consume_token(LPAR);
    label_18:
    while (true) {
      if (jj_2_50(10)) {
        ;
      } else {
        break label_18;
      }
      t1 = jj_consume_token(LITERAL);
      jj_consume_token(EQUALS);
      t2 = jj_consume_token(LITERAL);
         d.getMap().put(t1.image,t2.image);
    }
    jj_consume_token(RPAR);
     {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

/*
Parse a parameter specification
*/
  final public void ParseSpecs() throws ParseException {
    Directive d;
    d = ParseParameterSet();
     source.getParameters().getMap().putAll(d.getMap());
  }

/*Parse a question
*/
  final public Question ParseQuestion() throws ParseException {
    StringBuilder content=new StringBuilder("");
    ArrayList<Answer> answers=new ArrayList<Answer>();
    String s;
    Answer ans;
    label_19:
    while (true) {
      s = RegularContent();
                        content.append(s);
      if (jj_2_51(10)) {
        ;
      } else {
        break label_19;
      }
    }
    jj_consume_token(ENUM_BEGIN);
    label_20:
    while (true) {
      if (jj_2_52(10)) {
        jj_consume_token(ITEM);
        ans = ParseAnswer();
             answers.add(ans);
      } else if (jj_2_53(10)) {
        RegularContent();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_54(10)) {
        ;
      } else {
        break label_20;
      }
    }
    jj_consume_token(ENUM_END);
        {if (true) return new Question(content.toString(),answers,null);}
    throw new Error("Missing return statement in function");
  }

/*Parse an answer
*/
  final public Answer ParseAnswer() throws ParseException {
    StringBuilder content=new StringBuilder("");
    String s;
    boolean tval=false;
    Token t;
    label_21:
    while (true) {
      s = RegularContent();
                        content.append(s);
      if (jj_2_55(10)) {
        ;
      } else {
        break label_21;
      }
    }
    if (jj_2_58(10)) {
      jj_consume_token(TRUE_ITEM);
                  tval=true;content.append("%");
      label_22:
      while (true) {
        if (jj_2_56(10)) {
          ;
        } else {
          break label_22;
        }
        t = jj_consume_token(CHARS_IN_COMMENT);
                          content.append(t.image);
      }
      t = jj_consume_token(END_COMMENT);
                     content.append(t.image);
      label_23:
      while (true) {
        if (jj_2_57(10)) {
          ;
        } else {
          break label_23;
        }
        s = RegularContent();
                         content.append(s);
      }
    } else {
      ;
    }
        {if (true) return new Answer(content.toString(),tval,null);}
    throw new Error("Missing return statement in function");
  }

/* Get regular content, constructed from code characters, comments, verbatims,
\verb consructs, etc.
*/
  final public String RegularContent() throws ParseException {
    StringBuilder content=new StringBuilder("");
    Token t;
    if (jj_2_69(10)) {
      t = jj_consume_token(CHARS_IN_DEFAULT);
                             content.append(t.image);
    } else if (jj_2_70(10)) {
      if (jj_2_60(10)) {
        t = jj_consume_token(VERBTOK);
                     content.append(t.image);
        label_24:
        while (true) {
          if (jj_2_59(10)) {
            ;
          } else {
            break label_24;
          }
          t = jj_consume_token(CHARS_IN_VERBTOK);
                            content.append(t.image);
        }
      } else if (jj_2_61(10)) {
        t = jj_consume_token(EOL_IN_VERBTOK);
                           content.append(t.image);
      } else if (jj_2_62(10)) {
        jj_consume_token(0);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_71(10)) {
      t = jj_consume_token(COMMENT_S);
                   content.append(t.image);
      label_25:
      while (true) {
        if (jj_2_63(10)) {
          ;
        } else {
          break label_25;
        }
        t = jj_consume_token(CHARS_IN_COMMENT);
                           content.append(t.image);
      }
      t = jj_consume_token(END_COMMENT);
                       content.append(t.image);
    } else if (jj_2_72(10)) {
      label_26:
      while (true) {
        if (jj_2_64(10)) {
          ;
        } else {
          break label_26;
        }
        t = jj_consume_token(CHARS_IN_COMMENT);
                           content.append(t.image);
      }
      t = jj_consume_token(END_COMMENT);
                     content.append(t.image);
    } else if (jj_2_73(10)) {
      if (jj_2_65(10)) {
        t = jj_consume_token(B_LST);
      } else if (jj_2_66(10)) {
        t = jj_consume_token(B_VRB);
      } else if (jj_2_67(10)) {
        t = jj_consume_token(E_LST);
      } else if (jj_2_68(10)) {
        t = jj_consume_token(E_VRB);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      content.append(t.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return content.toString();}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
